src/objects/Child_Litigation_Activity__c.object
<CustomObject>
    <fields>
        <fullName>Child_Status__c</fullName>
        <label>Child Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Court_Date__c</fullName>
        <label>Court Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FED__c</fullName>
        <label>FED</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Law_Firm__c</fullName>
        <label>Law Firm</label>
        <picklist>
            <picklistValues>
                <fullName>BH Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Binder and Malter, LLP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collier Halpern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Griffin Griffin &amp; Alexander</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gross and Romanick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Henry Raphaelson Esquire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holland &amp; Knight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>James A. Polon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>John R. Harness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keen &amp; Matney LLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kimball Tirey &amp; St John</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law Office of Puckett and Redford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law Offices Michael McCarthy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law Offices of David K Barhydt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law Offices of Donna Ashton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law Offices of Russo &amp; Scolnick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lehrman Kronick &amp; Lehrman LLP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mallios Rider &amp; Goley LLP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marcus Errico Emmer &amp; Brooks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michael Modestino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pahl &amp; McCay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Robert P. Weisoff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rosenberg &amp; Estis, P.C.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teller and Levit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Todd B. Rothbard Attorney at Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wasserman-Stern Law Offices</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legal_Fees__c</fullName>
        <label>Legal Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Litigation_Activity_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Litigation Activity Parent</label>
        <referenceTo>Litigation__c</referenceTo>
        <relationshipLabel>Child Litigation Activities</relationshipLabel>
        <relationshipName>R00N60000001Z3ZnEAK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Litigation_Type__c</fullName>
        <label>Litigation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Breach of Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Payment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Original_Amount__c</fullName>
        <label>Original Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Paid_to_Date__c</fullName>
        <label>Paid to Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vacated_Locked_Out__c</fullName>
        <label>Vacated\Locked Out</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eRentPayer_De_Activated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>eRentPayer De-Activated</label>
        <type>Checkbox</type>
    </fields>
    <label>Child Litigation Activity</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{00000}</displayFormat>
        <label>Child Litigation Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Child Litigation Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>